--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,7 @@
 /*body colors and default colors and text*/
-body{
-        background-color: pink;
+body {
+  margin: 0;      
+  background-color: pink;
         color: white;
         font-family: 'EB Garamond', serif;
         /*font-family: 'Licorice', cursive;
@@ -11,12 +12,26 @@ body{
 /*header is for the title*/
 header {
   padding: 10px 10px;
-  text-align: center;
   background-color: white;
+  text-align: center;
   font-family: 'The Nautigal', cursive;
   font-size: 100px;
   color: black;
-  
+}
+
+.maybelline {
+  height: 50%;
+  width: 50%;
+}
+.maybelline img {
+  height: 20%;
+  width: 20%;
+}
+
+#total-quantity-bar img{
+  height: 5rem;
+  width: 5rem;
+  float: right;
 }
 /*quantity bar would be the shopping cart*/
 .quantity-bar {
@@ -29,7 +44,7 @@ ul {
   padding: 0;
 }
 li {
-  float: left;
+  float: right;
 }
 
 a {
@@ -47,6 +62,8 @@ li a {
 li a:hover {
   background-color: #111;
 }
+
+
 /*layout of products*/
 #grid {
   display: grid;
@@ -56,43 +73,80 @@ li a:hover {
   justify-content: center;
 
 }
-#grid p{
+/* #grid p{
   font-size: 20px;
 }
-#grid img {
-  border-radius: 50%;
-   width: 100%;
-  height: 100%;
+#grid h1{
+  font-family: 'The Nautigal', cursive;
 }
-#grid h3{
+#grid img {
+}
+#grid h2{
   font-family: 'The Nautigal', cursive;
   text-shadow: 2px 2px black;
-}
+} */
 .makeup-img img{
   width: 100%;
   height: 100%;
-  border-color: #82e0aa;
+  border-color: black;
   border-width: 10px;
   border-style: solid;
   border-radius: 10%;
 }
-/*card that shows off the products
-.card {
-  text-align: center;
-  border: grey solid 1px;
-  padding: 1rem;
-  width: 15rem;
-  height: 25rem;
-  display: inline-grid;
-  margin: 1rem 2rem;
-  box-shadow: 3px 4px #e04b52
-}*/
-.makeup-cards h2 {
-  color: black;
-  font-family: 'Licorice', cursive;
+/*card that shows off the products*/
+#makeupCard h2 {
+  font-size: 30px;
 
 }
-.makeup-cards p {
-  color: gray;
-  font-family: 'Licorice', cursive;
+#makeupCard h3{
+  font-size: 23px;
+}
+#makeup-cards p {
+  font-size: 10px;
+}
+
+#makeupCard {
+  text-align: center;
+  border: grey solid 1px;
+  border-radius: 10%;
+  border-width: 2px;
+  padding: 1rem;
+  width: 20rem;
+  height: 35rem;
+  display: inline-grid;
+  margin: 2rem 2rem;
+  box-shadow: 5px 5px 5px white;
+}
+
+#makeupCard img {
+  border-radius: 50%;
+  width: 90%;
+  height: 100%;
+  border-color:black;
+  border-style: solid;
+  border-width: 5px;
+}
+/*button*/
+.myButton {
+	box-shadow: 3px 4px 0px 0px #899599;
+	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+	background-color:#ededed;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+	display:inline-block;
+	cursor:pointer;
+	color:#3a8a9e;
+	font-family:Arial;
+	font-size:17px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #e1e2ed;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color:#bab1ba;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
